// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Updated Components/Buttons/DropdownButton Button with dropdown 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  height: 9.375rem;
}

.emotion-3 {
  position: relative;
  display: inline-block;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-5 {
  border-right: 0.0625rem solid transparent;
}

.emotion-5 button:first-of-type {
  border-top-right-radius: unset;
  border-bottom-right-radius: unset;
}

.emotion-6 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-7 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  height: auto;
  background-color: #175bf5;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-7:focus-visible:not(:disabled) {
  background-color: #1552DD;
}

.emotion-7:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-7:hover:not(:disabled) {
  background-color: #1552DD;
}

.emotion-7:active:not(:disabled) {
  background-color: #1249C4;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

.emotion-9 button:last-child {
  border-top-left-radius: unset;
  border-bottom-left-radius: unset;
}

.emotion-9 svg {
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: 0.2s;
  transition: 0.2s;
}

.emotion-11 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  width: 2.25rem;
  height: 2.25rem;
  background-color: #175bf5;
  padding: 0;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-11:focus-visible:not(:disabled) {
  background-color: #1552DD;
}

.emotion-11:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-11:hover:not(:disabled) {
  background-color: #1552DD;
}

.emotion-11:active:not(:disabled) {
  background-color: #1249C4;
}

.emotion-12 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-13 {
  fill: #ffffff;
  width: 1rem;
  height: 1rem;
}

.emotion-13 path {
  fill: #ffffff;
}

.emotion-18 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #1552DD;
  height: auto;
  background-color: #E7E8FF;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-18:focus-visible:not(:disabled) {
  background-color: #D6D8FF;
}

.emotion-18:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-18:hover:not(:disabled) {
  background-color: #D6D8FF;
}

.emotion-18:active:not(:disabled) {
  background-color: #B9C0FF;
}

.emotion-22 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #1552DD;
  width: 2.25rem;
  height: 2.25rem;
  background-color: #E7E8FF;
  padding: 0;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-22:focus-visible:not(:disabled) {
  background-color: #D6D8FF;
}

.emotion-22:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-22:hover:not(:disabled) {
  background-color: #D6D8FF;
}

.emotion-22:active:not(:disabled) {
  background-color: #B9C0FF;
}

.emotion-24 {
  fill: #1552DD;
  width: 1rem;
  height: 1rem;
}

.emotion-24 path {
  fill: #1552DD;
}

.emotion-27 button:first-of-type {
  border-top-right-radius: unset;
  border-bottom-right-radius: unset;
}

.emotion-29 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #1552DD;
  height: auto;
  background-color: rgba(84,94,255,0);
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-29:focus-visible:not(:disabled) {
  background-color: rgba(84,94,255,0.06);
}

.emotion-29:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-29:hover:not(:disabled) {
  background-color: rgba(84,94,255,0.06);
}

.emotion-29:active:not(:disabled) {
  background-color: rgba(84,94,255,0.14);
}

.emotion-33 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #1552DD;
  width: 2.25rem;
  height: 2.25rem;
  background-color: rgba(84,94,255,0);
  padding: 0;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-33:focus-visible:not(:disabled) {
  background-color: rgba(84,94,255,0.06);
}

.emotion-33:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-33:hover:not(:disabled) {
  background-color: rgba(84,94,255,0.06);
}

.emotion-33:active:not(:disabled) {
  background-color: rgba(84,94,255,0.14);
}

.emotion-40 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  height: 1.75rem;
  background-color: #175bf5;
  padding: 0 0.5rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-40:focus-visible:not(:disabled) {
  background-color: #1552DD;
}

.emotion-40:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-40:hover:not(:disabled) {
  background-color: #1552DD;
}

.emotion-40:active:not(:disabled) {
  background-color: #1249C4;
}

.emotion-44 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  width: 1.75rem;
  height: 1.75rem;
  background-color: #175bf5;
  padding: 0;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-44:focus-visible:not(:disabled) {
  background-color: #1552DD;
}

.emotion-44:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-44:hover:not(:disabled) {
  background-color: #1552DD;
}

.emotion-44:active:not(:disabled) {
  background-color: #1249C4;
}

.emotion-46 {
  fill: #ffffff;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-46 path {
  fill: #ffffff;
}

.emotion-51 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
  color: #1552DD;
  height: 1.75rem;
  background-color: #E7E8FF;
  padding: 0 0.5rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-51:focus-visible:not(:disabled) {
  background-color: #D6D8FF;
}

.emotion-51:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-51:hover:not(:disabled) {
  background-color: #D6D8FF;
}

.emotion-51:active:not(:disabled) {
  background-color: #B9C0FF;
}

.emotion-55 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
  color: #1552DD;
  width: 1.75rem;
  height: 1.75rem;
  background-color: #E7E8FF;
  padding: 0;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-55:focus-visible:not(:disabled) {
  background-color: #D6D8FF;
}

.emotion-55:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-55:hover:not(:disabled) {
  background-color: #D6D8FF;
}

.emotion-55:active:not(:disabled) {
  background-color: #B9C0FF;
}

.emotion-57 {
  fill: #1552DD;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-57 path {
  fill: #1552DD;
}

.emotion-62 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
  color: #1552DD;
  height: 1.75rem;
  background-color: rgba(84,94,255,0);
  padding: 0 0.5rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-62:focus-visible:not(:disabled) {
  background-color: rgba(84,94,255,0.06);
}

.emotion-62:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-62:hover:not(:disabled) {
  background-color: rgba(84,94,255,0.06);
}

.emotion-62:active:not(:disabled) {
  background-color: rgba(84,94,255,0.14);
}

.emotion-66 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
  color: #1552DD;
  width: 1.75rem;
  height: 1.75rem;
  background-color: rgba(84,94,255,0);
  padding: 0;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-66:focus-visible:not(:disabled) {
  background-color: rgba(84,94,255,0.06);
}

.emotion-66:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-66:hover:not(:disabled) {
  background-color: rgba(84,94,255,0.06);
}

.emotion-66:active:not(:disabled) {
  background-color: rgba(84,94,255,0.14);
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div>
          <div
            className="emotion-3"
          >
            <div
              className="emotion-4"
            >
              <div
                className="emotion-5"
              >
                <div
                  className="emotion-6"
                >
                  <button
                    className="emotion-7"
                    data-testid="dropdownbutton"
                    disabled={false}
                    onClick={[Function]}
                    type="button"
                  >
                    <span
                      className="emotion-8"
                    >
                      <span>
                        Click Here
                      </span>
                    </span>
                  </button>
                </div>
              </div>
              <div
                className="emotion-9"
              >
                <div
                  className="emotion-6"
                >
                  <button
                    className="emotion-11"
                    data-testid="dropdown-toggle-icon-button"
                    disabled={false}
                    onClick={[Function]}
                    type="button"
                  >
                    <span
                      className="emotion-12"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-13"
                      />
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div>
          <div
            className="emotion-3"
          >
            <div
              className="emotion-4"
            >
              <div
                className="emotion-5"
              >
                <div
                  className="emotion-6"
                >
                  <button
                    className="emotion-18"
                    data-testid="dropdownbutton"
                    disabled={false}
                    onClick={[Function]}
                    type="button"
                  >
                    <span
                      className="emotion-8"
                    >
                      <span>
                        Click Here
                      </span>
                    </span>
                  </button>
                </div>
              </div>
              <div
                className="emotion-9"
              >
                <div
                  className="emotion-6"
                >
                  <button
                    className="emotion-22"
                    data-testid="dropdown-toggle-icon-button"
                    disabled={false}
                    onClick={[Function]}
                    type="button"
                  >
                    <span
                      className="emotion-12"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-24"
                      />
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div>
          <div
            className="emotion-3"
          >
            <div
              className="emotion-4"
            >
              <div
                className="emotion-27"
              >
                <div
                  className="emotion-6"
                >
                  <button
                    className="emotion-29"
                    data-testid="dropdownbutton"
                    disabled={false}
                    onClick={[Function]}
                    type="button"
                  >
                    <span
                      className="emotion-8"
                    >
                      <span>
                        Click Here
                      </span>
                    </span>
                  </button>
                </div>
              </div>
              <div
                className="emotion-9"
              >
                <div
                  className="emotion-6"
                >
                  <button
                    className="emotion-33"
                    data-testid="dropdown-toggle-icon-button"
                    disabled={false}
                    onClick={[Function]}
                    type="button"
                  >
                    <span
                      className="emotion-12"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-24"
                      />
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div>
          <div
            className="emotion-3"
          >
            <div
              className="emotion-4"
            >
              <div
                className="emotion-5"
              >
                <div
                  className="emotion-6"
                >
                  <button
                    className="emotion-40"
                    data-testid="dropdownbutton"
                    disabled={false}
                    onClick={[Function]}
                    type="button"
                  >
                    <span
                      className="emotion-8"
                    >
                      <span>
                        Click Here
                      </span>
                    </span>
                  </button>
                </div>
              </div>
              <div
                className="emotion-9"
              >
                <div
                  className="emotion-6"
                >
                  <button
                    className="emotion-44"
                    data-testid="dropdown-toggle-icon-button"
                    disabled={false}
                    onClick={[Function]}
                    type="button"
                  >
                    <span
                      className="emotion-12"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-46"
                      />
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div>
          <div
            className="emotion-3"
          >
            <div
              className="emotion-4"
            >
              <div
                className="emotion-5"
              >
                <div
                  className="emotion-6"
                >
                  <button
                    className="emotion-51"
                    data-testid="dropdownbutton"
                    disabled={false}
                    onClick={[Function]}
                    type="button"
                  >
                    <span
                      className="emotion-8"
                    >
                      <span>
                        Click Here
                      </span>
                    </span>
                  </button>
                </div>
              </div>
              <div
                className="emotion-9"
              >
                <div
                  className="emotion-6"
                >
                  <button
                    className="emotion-55"
                    data-testid="dropdown-toggle-icon-button"
                    disabled={false}
                    onClick={[Function]}
                    type="button"
                  >
                    <span
                      className="emotion-12"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-57"
                      />
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div>
          <div
            className="emotion-3"
          >
            <div
              className="emotion-4"
            >
              <div
                className="emotion-27"
              >
                <div
                  className="emotion-6"
                >
                  <button
                    className="emotion-62"
                    data-testid="dropdownbutton"
                    disabled={false}
                    onClick={[Function]}
                    type="button"
                  >
                    <span
                      className="emotion-8"
                    >
                      <span>
                        Click Here
                      </span>
                    </span>
                  </button>
                </div>
              </div>
              <div
                className="emotion-9"
              >
                <div
                  className="emotion-6"
                >
                  <button
                    className="emotion-66"
                    data-testid="dropdown-toggle-icon-button"
                    disabled={false}
                    onClick={[Function]}
                    type="button"
                  >
                    <span
                      className="emotion-12"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-57"
                      />
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Updated Components/Buttons/DropdownButton IconButton with dropdown 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  height: 9.375rem;
}

.emotion-3 {
  position: relative;
  display: inline-block;
}

.emotion-5 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-6 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  width: 2.25rem;
  height: 2.25rem;
  background-color: #175bf5;
  padding: 0;
  border-radius: 2.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-6:focus-visible:not(:disabled) {
  background-color: #1552DD;
}

.emotion-6:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-6:hover:not(:disabled) {
  background-color: #1552DD;
}

.emotion-6:active:not(:disabled) {
  background-color: #1249C4;
}

.emotion-7 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-8 {
  fill: #ffffff;
  width: 1rem;
  height: 1rem;
}

.emotion-8 path {
  fill: #ffffff;
}

.emotion-12 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #1552DD;
  width: 2.25rem;
  height: 2.25rem;
  background-color: #E7E8FF;
  padding: 0;
  border-radius: 2.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-12:focus-visible:not(:disabled) {
  background-color: #D6D8FF;
}

.emotion-12:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-12:hover:not(:disabled) {
  background-color: #D6D8FF;
}

.emotion-12:active:not(:disabled) {
  background-color: #B9C0FF;
}

.emotion-14 {
  fill: #1552DD;
  width: 1rem;
  height: 1rem;
}

.emotion-14 path {
  fill: #1552DD;
}

.emotion-18 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #1552DD;
  width: 2.25rem;
  height: 2.25rem;
  background-color: rgba(84,94,255,0);
  padding: 0;
  border-radius: 2.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-18:focus-visible:not(:disabled) {
  background-color: rgba(84,94,255,0.06);
}

.emotion-18:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-18:hover:not(:disabled) {
  background-color: rgba(84,94,255,0.06);
}

.emotion-18:active:not(:disabled) {
  background-color: rgba(84,94,255,0.14);
}

.emotion-24 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  width: 1.75rem;
  height: 1.75rem;
  background-color: #175bf5;
  padding: 0;
  border-radius: 2.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-24:focus-visible:not(:disabled) {
  background-color: #1552DD;
}

.emotion-24:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-24:hover:not(:disabled) {
  background-color: #1552DD;
}

.emotion-24:active:not(:disabled) {
  background-color: #1249C4;
}

.emotion-26 {
  fill: #ffffff;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-26 path {
  fill: #ffffff;
}

.emotion-30 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
  color: #1552DD;
  width: 1.75rem;
  height: 1.75rem;
  background-color: #E7E8FF;
  padding: 0;
  border-radius: 2.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-30:focus-visible:not(:disabled) {
  background-color: #D6D8FF;
}

.emotion-30:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-30:hover:not(:disabled) {
  background-color: #D6D8FF;
}

.emotion-30:active:not(:disabled) {
  background-color: #B9C0FF;
}

.emotion-32 {
  fill: #1552DD;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-32 path {
  fill: #1552DD;
}

.emotion-36 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
  color: #1552DD;
  width: 1.75rem;
  height: 1.75rem;
  background-color: rgba(84,94,255,0);
  padding: 0;
  border-radius: 2.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-36:focus-visible:not(:disabled) {
  background-color: rgba(84,94,255,0.06);
}

.emotion-36:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-36:hover:not(:disabled) {
  background-color: rgba(84,94,255,0.06);
}

.emotion-36:active:not(:disabled) {
  background-color: rgba(84,94,255,0.14);
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div>
          <div
            className="emotion-3"
          >
            <div
              className="emotion-4"
            >
              <div
                className="emotion-5"
              >
                <button
                  className="emotion-6"
                  data-testid="icon-dropdown-icon-button"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  <span
                    className="emotion-7"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-8"
                    />
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div>
          <div
            className="emotion-3"
          >
            <div
              className="emotion-4"
            >
              <div
                className="emotion-5"
              >
                <button
                  className="emotion-12"
                  data-testid="icon-dropdown-icon-button"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  <span
                    className="emotion-7"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-14"
                    />
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div>
          <div
            className="emotion-3"
          >
            <div
              className="emotion-4"
            >
              <div
                className="emotion-5"
              >
                <button
                  className="emotion-18"
                  data-testid="icon-dropdown-icon-button"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  <span
                    className="emotion-7"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-14"
                    />
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div>
          <div
            className="emotion-3"
          >
            <div
              className="emotion-4"
            >
              <div
                className="emotion-5"
              >
                <button
                  className="emotion-24"
                  data-testid="icon-dropdown-icon-button"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  <span
                    className="emotion-7"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-26"
                    />
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div>
          <div
            className="emotion-3"
          >
            <div
              className="emotion-4"
            >
              <div
                className="emotion-5"
              >
                <button
                  className="emotion-30"
                  data-testid="icon-dropdown-icon-button"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  <span
                    className="emotion-7"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-32"
                    />
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div>
          <div
            className="emotion-3"
          >
            <div
              className="emotion-4"
            >
              <div
                className="emotion-5"
              >
                <button
                  className="emotion-36"
                  data-testid="icon-dropdown-icon-button"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  <span
                    className="emotion-7"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-32"
                    />
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Updated Components/Buttons/DropdownButton Overview 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  margin: -16px;
}

.emotion-3 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.375rem;
  font-size: 1rem;
  letter-spacing: 0.015625rem;
  color: #1B214F;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <p
        className="emotion-3"
        id="a-dropdownbutton-is-a-dual-function-menu-button-that-comes-with-a-cta-and-a-dropdown-with-actions"
      >
        A DropdownButton is a dual-function menu button that comes with a CTA and a dropdown with actions
      </p>
    </div>
  </div>
</div>
`;
